      \PR{18367}, a duplicate of \PR{18004}, by Jan Meis et al.
      For consistency, \code{NULL[[]]} is also erroneous now.
      \code{x[[]] <- v} gives an error of the same class \code{"MissingSubscriptError"}.

      %% possibly back port to 4.2.z branch
      \item The \code{relist()} function of \pkg{utils} now supports
      \code{NULL} elements in the skeleton (\PR{15854}).
    }
  }
}

\section{\Rlogo CHANGES IN R 4.2.1 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{tools::Rdiff(useDiff = TRUE)} checks for the presence
      of an external \command{diff} command and switches to
      \code{useDiff = FALSE} if none is found.
      This allows \command{R CMD Rdiff} to always work.

      \item On Windows, environment variable
      \env{R_LIBCURL_SSL_REVOKE_BEST_EFFORT} can be used to switch to only
      best effort revocation checks with the default \code{"libcurl"}
      download method.  This reduces security, but may be needed for
      downloads to work with MITM proxies (\PR{18379}).
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item The PDF manuals (if built) can be compacted by the new
      target \command{make compact-pdf} (at the top level or in
      directory \file{doc/manual}).
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{qt(*, log.p=TRUE)} in outer tails no longer produces
      \code{NaN} in its final steps, thus fixing \PR{18360}.

      \item \code{tools::Rd2latex()} now escapes hashes and ampersands
      when writing URLs, fixing LaTeX errors with such URLs in \verb{\tabular}.

      \item When \code{isGeneric(f, fdef=*)} is used with mismatching
      names, the warning is better understandable; reported (with fix) in
      \PR{18370} by Gabe Becker.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.2.1}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item New function \code{utils::findCRANmirror()} to find out if a